<resources>
    <string name="app_name">Banking App</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <!-- Strings related to reseting database -->
    <string name="reset_database">Reset Database</string>
    <string name="reset_confirmation_title">Reset Database?</string>
    <string name="reset_confirmation_message">Resetting will result in the loss of all user and account information</string>
    <string name="id_notify_title">Admin ID</string>
    <string name="id_notify_message">Your Admin ID is 1</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Strings related to admin options -->
    <string name="admin_option_messages">Messages</string>
    <string name="admin_option_add_messages">Add\nMessages</string>
    <string name="admin_option_balance">Total \nBalance</string>
    <string name="admin_option_user_balance">User \nBalance</string>
    <string name="admin_option_create">Create \nUser</string>
    <string name="admin_option_view">View \nUsers</string>
    <string name="admin_option_promote">Promote \nTeller</string>
    <string name="log_out">Log Out</string>

    <!-- Strings related to teller options -->
    <string name="teller_option_create_account">Create \nAccount</string>
    <string name="teller_option_give_interest">Give \nInterest</string>
    <string name="teller_option_deposit">Deposit</string>
    <string name="teller_option_withdraw">Withdraw</string>
    <string name="teller_option_check_balance">Check \nBalance</string>
    <string name="teller_option_close_session">Log Out \nUser</string>
    <string name="teller_option_update_info">Update \nInfo</string>
    <string name="teller_option_projected_earnings">Projected\nEarnings</string>
    <string name="teller_messages">View \nMessages</string>

    <!-- Strings related to atm options -->
    <string name="atm_option_list_account_balance">List\nAccounts</string>
    <string name="atm_option_deposit">Deposit</string>
    <string name="atm_option_withdraw">Withdraw</string>
    <string name="atm_option_check_balance">Check \nBalance</string>

    <!-- Strings related to total bank balance fragment -->
    <string name="total_balance">Total Balance: $</string>
    <string name="users_balance">Users Balance: $</string>

    <!-- Temp holder for the balance -->
    <string name="temp_balance">0.00</string>

    <!-- Strings related to user creation -->
    <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_type_spinner">Type:</string>
    <string name="action_create_user">Create User</string>
    <string name="dialog_create_title">User ID</string>

    <!-- Strings related to message creation -->
    <string name="message_prompt">Message (max 512 chars)</string>
    <string name="send_message_prompt">Leave Message</string>

    <!-- Strings related to teller promotion -->
    <string name="teller_names">Tellers</string>
    <string name="action_promote">Promote</string>

    <!-- Strings related to account creation -->
    <string name="prompt_account_name">Account Name</string>
    <string name="prompt_account_balance">Balance</string>
    <string name="prompt_account_type">Type</string>
    <string name="action_create_account">Create Account</string>

    <!-- Strings related to giving interest -->
    <string name="action_give_interest_one">Give Interest To This Account</string>
    <string name="action_give_interest_all">Give Interest To All Accounts</string>

    <!-- Strings related to depositing -->
    <string name="prompt_amount">Amount</string>
    <string name="action_deposit">Deposit</string>

    <!-- Strings related to withdrawing -->
    <string name="action_withdraw">Withdraw</string>

    <!-- Strings related to viewing account balance -->
    <string name="account_balance">Balance: $</string>
    <string name="action_check_balance">Check Balance</string>

    <!-- Strings related to teller starting menu -->
    <string name="action_login_customer">Authenticate Customer</string>
    <string name="action_create_customer">Create Customer</string>
    <string name="action_teller_messages">Check Messages</string>

    <!-- Strings related to updating user info -->
    <string name="action_update_info">Update</string>
    <string name="action_update_name">Update Name</string>
    <string name="action_update_age">Update Age</string>
    <string name="action_update_address">Update Address</string>
    <string name="action_update_password">Update Password</string>

    <!-- Strings related to serializing -->
    <string name="serialize_confirmation_title">Serialize Database?</string>
    <string name="serialize_confirmation_message">The database will be serialized and placed in a file called database.ser</string>

    <!-- Strings related to deserializing -->
    <string name="deserialize_confirmation_title">Deserialize Database?</string>
    <string name="deserialize_confirmation_message">The database will be reset and replaced with the information in database.ser</string>

</resources>
