<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Id Field -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/deposit_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorText"
            android:hint="@string/prompt_id"
            android:maxLines="1"
            android:textColor="@color/colorText" />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <!-- Amount Field -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/deposit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorText"
            android:hint="@string/prompt_amount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/colorText" />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <!-- Withdraw Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:backgroundTint="@color/colorPrimary"
        android:text="@string/action_withdraw"
        android:textColor="@color/colorText" />


</LinearLayout>